--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
         </div>
 
         <div class="footer">
-            <p>English Learning Bot Web Version © 2023 | Все данные хранятся локально в вашем браузере</p>
+            <p>English Learning Bot Web Version © 2026 | Все данные хранятся локально в вашем браузере</p>
             <p style="margin-top: 5px; font-size: 12px;">Для работы приложения требуется включенный JavaScript</p>
         </div>
     </div>
@@ -680,10 +680,10 @@
                 "grammar": {
                     "topics": ["Present Simple", "Артикли", "Множественное число", "Притяжательные местоимения"],
                     "exercises": {
-                        "Present Simple": "I _ (work) every day. → I work every day.",
-                        "Артикли": "This is _ apple. → This is an apple.",
-                        "Множественное число": "One cat, two _ . → One cat, two cats.",
-                        "Притяжательные местоимения": "This is _ (я) book. → This is my book."
+                        "Present Simple": "Present Simple (Настоящее простое время). Употребление: Для описания регулярных действий, привычек, фактов, расписаний. Формула: I/You/We/They + глагол (без изменений). He/She/It + глагол + s/es.– *I work. They play. He reads. She goes.*",
+                        "Артикли": "Артикли (a/an, the) с существительными во множественном числе. Неопределённый артикль (a/an): Не используется с существительными во множественном числе.– *A book* (одна книга) → *books* (книги). Определённый артикль (the): Используется, когда речь идёт о конкретных, известных собеседнику предметах или людях.– *The books on the table are mine.* (Конкретные книги на столе).",
+                        "Множественное число": "Существительные во множественном числе. Общее правило: + s (*cat – cats, book – books*). Окончания -s, -ss, -x, -ch, -sh: + es (*bus – buses, box – boxes, watch – watches*). Согласная + y: y → i + es (*city – cities, baby – babies*). Гласная + y: + s (*boy – boys, day – days*). Некоторые исключения: *child – children, man – men, woman – women, foot – feet, tooth – teeth, mouse – mice*.",
+                        "Притяжательные местоимения": "Притяжательные местоимения (Possessive Pronouns). Обозначают принадлежность и отвечают на вопрос «Чей?». 1 л., ед. ч.: my (мой), mine (мой). 2 л., ед. ч.: your (твой), yours (твой). 3 л., ед. ч. (м.р.): his (его), his (его). 3 л., ед. ч. (ж.р.): her (её), hers (её). 3 л., ед. ч. (ср.р.): its (его/её для животных, предметов). 1 л., мн. ч.: our (наш), ours (наш). 2 л., мн. ч.: your (ваш), yours (ваш). 3 л., мн. ч.: their (их), theirs (их)."
                     },
                     "tests": {
                         "Present Simple": [
@@ -726,7 +726,8 @@
                                 "Pull someone's leg – разыгрывать кого-либо, шутить.","Under the weather – чувствовать себя неважно, приболеть."],
                         "Деловая лексика": ["To meet a deadline – уложиться в срок.", "To run a meeting – проводить собрание.", "A startup – стартап.", "A stakeholder – заинтересованная сторона (клиент, сотрудник, инвестор)", "A budget – бюджет.",
                                             "To launch a product – выпустить продукт на рынок.", "A merger – слияние компаний.", "A takeover – поглощение компании.", "To negotiate a deal – вести переговоры по сделке.",
-                                            "A quarterly report – квартальный отчёт.", "To submit a proposal – подать/представить предложение.", "To work freelance – работать на фрилансе.", "Remote work – удалённая работа.", "A milestone – важный этап, веха в проекте."],
+                                            "A quarterly report – квартальный отчёт.", "To submit a proposal – подать/представить предложение.", "To work freelance – работать на фрилансе.", "Remote work – удалённая работа.", "A milestone – важный этап, веха в проекте.",
+                                            "To put off (a meeting) – откладывать (встречу).", "To set up (a company) – основать, создать (компанию).", "To take over (a company) – взять на себя управление, поглотить (компанию).", "To turn down (an offer) – отклонить (предложение)."],
                         "Академические слова": [ "To conduct research – проводить исследование.", "A significant finding – значимое открытие/результат.", "To analyze data – анализировать данные.",
                                                 "To draw a conclusion – сделать вывод.", "To support an argument – поддерживать аргумент.", "In contrast – в противоположность, в отличие от.",
                                                 "Furthermore / Moreover – более того.", "Therefore / Thus – следовательно, таким образом.", "A hypothesis – гипотеза.", "A source – источник.", "To cite a source – цитировать источник.",
@@ -770,10 +771,10 @@
                 "grammar": {
                     "topics": ["Present Perfect", "Условные предложения", "Пассивный залог", "Косвенная речь"],
                     "exercises": {
-                        "Present Perfect": "I _ (never/visit) London. → I have never visited London.",
-                        "Условные предложения": "If I _ (have) time, I would help you. → If I had time, I would help you.",
-                        "Пассивный залог": "The book _ (write) by a famous author. → The book was written by a famous author.",
-                        "Косвенная речь": "She said: 'I am tired.' → She said that she _ tired. → She said that she was tired."
+                        "Present Perfect": "Present Perfect (Настоящее совершенное время). Образуется: have/has + причастие прошедшего времени (V3). Употребляется для связи прошлого с настоящим: когда действие завершилось, но результат важен сейчас (*I have finished my work*), или когда действие произошло в неопределённый момент в прошлом (*She has been to Paris*). Часто используется с наречиями: *ever, never, already, yet, just, recently, for, since*.",
+                        "Условные предложения": "Условные предложения (Conditionals). Нулевой тип (факты, законы природы): If + Present Simple, Present Simple. (*If you heat ice, it melts*). Первый тип (реальные ситуации в будущем): If + Present Simple, Future Simple. (*If it rains, we will stay home*). Второй тип (нереальные ситуации в настоящем/будущем): If + Past Simple, would + глагол. (*If I had money, I would buy a car*). Третий тип (нереальные ситуации в прошлом): If + Past Perfect, would have + V3. (*If I had known, I would have helped*).",
+                        "Пассивный залог": "Пассивный залог (Passive Voice). Образуется: be + причастие прошедшего времени (V3). Время определяется формой глагола *be*. Акцент переносится на действие или объект, а не на исполнителя. Исполнитель вводится предлогом *by* (если нужен). Пример: Present Simple Passive: *am/is/are + V3* (*The letter is written every day*). Past Simple Passive: *was/were + V3* (*The house was built in 1990*). Present Perfect Passive: *have/has been + V3* (*The work has been done*).",
+                        "Косвенная речь": "Косвенная речь (Reported Speech). При переводе прямой речи в косвенную меняются времена (правило согласования времён), местоимения и указательные слова. Согласование времён: Если глагол вводящей части в прошедшем времени (*said, told*), то время в цитате сдвигается 'назад': Present Simple → Past Simple (*'I work' → He said he worked*), Present Continuous → Past Continuous, Present Perfect → Past Perfect, Past Simple → Past Perfect (часто), Future Simple (will) → Future-in-the-Past (would). Изменение слов: *now → then, today → that day, yesterday → the day before, here → there, this → that*. Вопросы: Прямой порядок слов, без вспомогательных глаголов *do/does/did*. *'Where do you live?' → He asked where I lived*. Повелительное наклонение: Глагол заменяется на *to + инфинитив* или *not to + инфинитив*. *'Close the door' → He told me to close the door*."
                     },
                     "tests": {
                         "Present Perfect": [
@@ -861,10 +862,10 @@
                 "grammar": {
                     "topics": ["Инверсия", "Смешанные условные", "Эллипсис", "Сложные времена"],
                     "exercises": {
-                        "Инверсия": "Never _ I seen such beauty. → Never have I seen such beauty.",
-                        "Смешанные условные": "If I _ (study) harder, I would have passed the exam. → If I had studied harder, I would have passed the exam.",
-                        "Эллипсис": "She can play the piano and he _ the guitar. → She can play the piano and he can the guitar.",
-                        "Сложные времена": "By next year, I _ (work) here for 10 years. → By next year, I will have been working here for 10 years."
+                        "Инверсия": "Инверсия — изменение обычного порядка слов (подлежащее + сказуемое) для усиления или в определённых конструкциях. Чаще всего используется: 1) В вопросах (*Do you know?*). 2) После отрицательных и ограничивающих слов в начале предложения для эмфазы: *Never have I seen*, *Hardly had she left*, *Not only did he come*, *Under no circumstances are you to open*. 3) В условных предложениях вместо *if* для формального стиля: *Were I you, I would go* (= If I were you), *Had I known, I would have called* (= If I had known).",
+                        "Смешанные условные": "Смешанные условные — комбинация частies из разных типов условных предложений, когда время в условии и следствии относится к разным моментам. Чаще всего: условие о прошлом (3-й тип), а следствие о настоящем (2-й тип): *If you had studied harder (в прошлом), you would be at university now (сейчас)*. Или реже: условие о настоящем/общем (2-й тип), а следствие о прошлом (3-й тип): *If I were more organized (вообще), I wouldn't have missed the deadline (тогда)*.",
+                        "Эллипсис": "Эллипсис — намеренный пропуск слов, которые легко восстанавливаются из контекста, чтобы избежать повторов. Часто в сравнениях, ответах, союзах *and*, *but*, *or*: *She can sing, and he can [sing] too*. *I work harder than you [work]*. *— Are you coming? — Yes, I am [coming]*. *I could have helped, but I didn't [help]*.",
+                        "Сложные времена": "Сложные времена (аспекты) — комбинация временных форм, показывающих длительность или завершённость действия относительно другого момента. Perfect (завершённость): *have/has/had + V3* — действие завершено к определённому моменту (*I have done it* — к настоящему; *I had done it by 5 pm* — к моменту в прошлом). Continuous (длительность, процесс): *be + V-ing* — действие в развитии в определённый момент (*I am reading now*; *I was reading at 5 pm*). Perfect Continuous (длительность + завершённость/результат): *have/has/had been + V-ing* — действие длилось какое-то время и либо только что завершилось, либо всё ещё идёт, подчёркивается сам процесс (*I have been waiting for two hours*)."
                     },
                     "tests": {
                         "Инверсия": [
